# cpp-game-server

./: .$cpp-game-server.drawio.bkp  .gitignore  CMakeLists.txt  Dockerfile  HelpList.txt  README.md  cpp-game-server.drawio  cpp-game-server.sln
legacy/: collision_detector.cpp  collision_detector.h  geom.h
legacy/test/: collision-detector-tests.cpp
legacy/test.old/: command.txt  curl.txt
legacy/test.old/autho/: test_api_token_not_found.txt
legacy/test.old/basic/: test_api_bad_request.txt
legacy/test.old/debug/: test_api_debug_data_clear.txt  test_api_debug_start_position_default.txt
legacy/test.old/login/: test_api_game_login_invalid_argument.txt
legacy/test.old/move/: test_api_player_move_state.txt
legacy/test.old/state/: test_api_game_state_invalid_method.txt
legacy/test.old/time/: test_api_time_tick_invalid_body.txt  test_api_time_tick_miss_body.txt  test_api_time_tick_state.txt
legacy/tools/: my_logger.h  os_adapter.cpp
src/: boost_json.cpp  boost_json.h  collision_handler.cpp  collision_handler.h  domain.cpp  domain.h  extra_data.h  game_handler.cpp  game_handler.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger_handler.cpp  logger_handler.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  options.cpp  options.h  packages.config  player.cpp  player.h  request_handler.cpp  request_handler.h  resource_handler.cpp  resource_handler.h  serialization_handler.cpp  serialization_handler.h  src.vcxproj  src.vcxproj.filters  test_frame.cpp  test_frame.h  time_handler.cpp  time_handler.h  token.cpp  token.h
src/postgres/: common.h  postgers.cpp  postgers.h  tagged_uuid.cpp  tagged_uuid.h
src/tools/: os_adapter.h
static/test_files/: u_type.cpp
test/: collision_handler_tests.cpp  command.txt  loot_generator_tests.cpp  packages.config  player_tests.cpp  test.vcxproj  test.vcxproj.filters  test_api_game_login_invalid_method.txt  test_api_game_login_invalid_name.txt  test_api_game_state_invalid_method.txt  test_api_map_not_found.txt  test_api_maps.txt  test_api_player_move_miss_body.txt  test_api_players_list.txt  test_api_town.txt
test.old/: curl.txt
test.old/autho/: test_api_authorization_missing.txt
test.old/debug/: test_api_debug_start_position_false.txt
test.old/move/: test_api_player_move_invalid_body.txt
test/autho/: test_api_players_list.txt
test/basic/: test_api_map1.txt  test_api_map_not_found.txt
test/debug/: test_api_debug_bad_request.txt  test_api_debug_start_position_true.txt  test_api_debug_test_end.txt
test/login/: test_api_game_login_miss_name_or_map.txt
test/move/: test_api_player_move_invalid_content_type.txt
test/state/: test_api_game_state.txt
tests/: loot_generator_tests.cpp  model_tests.cpp
